# ifc2rdf-webapp

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
ifc2rdf_webapp/: Homepage.py  requirements.txt
ifc2rdf_webapp/pages/: 1_🎮_Viewer.py  2_🧠_Explorer.py  3_📊_Validator.py  4_🩺_Health.py  5_🧮_Quantities.py  _📊_Validator.py  _🔄_converter.py  _🔍🧠_explorer.py  _🧠_Explorer.py  _🧮_quantities.py  _🩺_health.py
ifc2rdf_webapp/pages/frontend-viewer/: MyComponent.tsx  index.tsx  package-lock.json  package.json
ifc2rdf_webapp/tools/: ifchelper.py  pandashelper.py  rdf_helper.py
tests/: test_rdf_helper.py  trails.py
tests/resources/: TUD_Nür_EI_BAC_Model_2nd Floor.ifc  TUD_Nür_EI_Core_and_Shell_2nd Floor.ifc  TUD_Nür_EI_Structural_2nd Floor.ifc  building_data.ttl
