[tool.poetry]
name = "ifc2rdf-webapp"
version = "0.1.0"
description = ""
authors = ["Janakiram Karlpudi <janakiramkarlapudi841@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.30.0"
ifcopenshell = "^0.7.0.231218"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
pandas = "^2.2.0"
xlsxwriter = "^3.1.9"
lark = "^1.1.9"
ifc2rdftool = {git = "https://github.com/Janakiram916/ifc2rdfTool"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
